added linting configuration and pre commit hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
     "strict": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
