--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.9.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
