--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
+    "playwright-qase-reporter": "^2.1.6",
     "prettier": "^3.6.2"
   },
   "lint-staged": {
