--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "target": "es2024",
-    "types": [],
-    // For nodejs:
-    "lib": ["esnext"],
     "types": ["node"],
+    // For nodejs:
+    "lib": ["esnext", "dom"],
     // and npm install -D @types/node
 
     // Other Outputs
