--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "lint:check": "eslint . --ext .ts,.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "playwright test",
     "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
     "prepare": "husky",
-    "test:smoke": "cross-env TEST_RUN_TITLE=\"TR Smoke\" npx playwright test --grep @smoke",
-    "test:dep": "cross-env TEST_RUN_TITLE=\"Deposit Methods\" npx playwright test --project='DepMethods' --workers=1 --grep @depMethods --headed"
+    "test:smoke": "cross-env TEST_RUN_TITLE=\"TR Smoke\" npx playwright test --config=playwright.config.qase.ts --grep @smoke",
+    "test:dep-win": "cross-env OS_TYPE=windows TEST_RUN_TITLE=\"Deposit Methods\" npx playwright test --config=playwright.config.slack.ts --project=DepMethods --workers=1 --grep @depMethods --headed",
+    "test:dep-mac": "cross-env OS_TYPE=mac TEST_RUN_TITLE=\"Deposit Methods\" npx playwright test --config=playwright.config.slack.ts --project=DepMethods --workers=1 --grep @depMethods --headed"
   },
   "keywords": [],
   "author": "",
