--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -4,6 +4,15 @@ on:
   schedule:
     - cron: '*/15 * * * *'
 
+  workflow_dispatch:
+    inputs:
+      deployment_target:
+        description: 'Deployment target'
+        required: true
+        type: choice
+        options:
+          - Run health checks
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,4 +30,19 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npm run test:health-checks
+
+      - name: send default message
+        if: failure()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: 'API tests failed. Better check TR!!! '
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: healthcheck
+          path: test_summary.json
+          if-no-files-found: ignore
