--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:smoke": "cross-env TEST_RUN_TITLE=\"TR Smoke\" npx playwright test --config=playwright.config.qase.ts --grep @smoke",
     "test:dep-win": "npx playwright test --config=playwright.config.slack.ts --project=DepMethods --workers=1 --grep @depMethods",
     "test:dep-mac": "npx playwright test --config=playwright.config.slack.ts --project=DepMethods --workers=1 --grep @depMethods",
-    "health-checks": "cross-env OS_TYPE=mac TEST_RUN_TITLE=\"Health Checks\" npx playwright test --config=playwright.config.qase.ts --project=healthChecks"
+    "test:health-checks": "cross-env OS_TYPE=mac TEST_RUN_TITLE=\"Health Checks\" npx playwright test --workers=4 --config=playwright.config.health.ts --project=healthChecks"
   },
   "keywords": [],
   "author": "",
