--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Chromium
+        run: npx playwright install chromium
+
       - name: Run tests
         run: npm run test:health-checks
 
