--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -43,9 +43,13 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: 'API tests failed. Better check TR!!! '
 
-      - uses: actions/upload-artifact@v4
-        if: always()
+      - name: Ensure Playwright summary file exists
+        run: |
+          if [ ! -f test_summary.json ]; then
+            echo '{}' > test_summary.json
+
+      - name: Upload Playwright test summary
+        uses: actions/upload-artifact@v4
         with:
-          name: healthcheck
+          name: playwright-test-summary
           path: test_summary.json
-          if-no-files-found: ignore
