--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -52,5 +52,5 @@ jobs:
       - name: Upload Playwright test summary
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-test-summary
+          name: test-summary
           path: test_summary.json
