--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -36,12 +36,12 @@ jobs:
         run: npm run test:health-checks
 
       - name: send default message
-        if: failure()
+        if: always()
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: 'API tests failed. Better check TR!!! '
+          message: 'TEST!! '
 
       - name: Ensure Playwright summary file exists
         run: |
