--- a/.github/workflows/healthChecks.yml
+++ b/.github/workflows/healthChecks.yml
@@ -35,17 +35,30 @@ jobs:
       - name: Run tests
         run: npm run test:health-checks
 
+      - name: Ensure Playwright summary file exists
+        if: ${{ always() }}
+        run: |
+          if [ ! -f test_summary.json ]; then
+            node .github/scripts/ensure-summary.js
+          fi
+
       - name: Read Playwright summary
-        if: failure()
+        if: ${{ failure() }}
         id: summary
         run: |
+          if [ ! -f test_summary.json ]; then
+            echo "total=0" >> "$GITHUB_OUTPUT"
+            echo "failed=0" >> "$GITHUB_OUTPUT"
+            echo "duration=0" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
           summary=$(cat test_summary.json)
-          echo "total=$(jq '.total_tests' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
-          echo "failed=$(jq '.failed' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
-          echo "duration=$(jq '.duration_seconds' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
+          echo "total=$(jq -r '.total_tests' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
+          echo "failed=$(jq -r '.failed' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
+          echo "duration=$(jq -r '.duration_seconds' <<< \"$summary\")" >> "$GITHUB_OUTPUT"
 
       - name: send default message
-        if: failure()
+        if: ${{ failure() }}
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
@@ -57,13 +70,8 @@ jobs:
             Tests: ${{ steps.summary.outputs.failed }} failed / ${{ steps.summary.outputs.total }} total
             Duration: ${{ steps.summary.outputs.duration }}s
 
-      - name: Ensure Playwright summary file exists
-        run: |
-          if [ ! -f test_summary.json ]; then
-            node .github/scripts/ensure-summary.js
-          fi
-
       - name: Upload Playwright test summary
+        if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: test-summary
